--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
