--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.18"
   },
   "dependencies": {
