doc: instalação do cors.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 MYSQL_USER= root // nome do usuário
-MYSQL_PASSWORD= ***** // senha di usuário
+MYSQL_PASSWORD= ***** // senha do usuário
 MYSQL_DATABASE= dbname // nome do bando de dados
 HOSTNAME=localhost // host do API
