--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,16 @@
 {
     "env": {
+        "commonjs": true,
         "es2021": true
     },
     "extends": [
         "airbnb-base"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "ecmaVersion": "latest"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
     "rules": {
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "template-curly-spacing": ["error", "always"]
     }
 }
